# SEC-PPDL

./: .gitignore  .gitmodules  0001-.patch  128BIT_IMPLEMENTATION_SUMMARY.md  CMakeLists.txt  README.md  TODO.md  cpp_coding_style.md  gelu_eval.csv  main.cpp  protocol.tex  silu_eval.csv  throttle.sh
Datatype/: CMakeLists.txt  Makefile
Datatype/include/Datatype/: Tensor.h  UnifiedType.h
HE/: CMakeLists.txt
HE/include/HE/: HE.h  NetIO.h
HE/include/HE/unified/: Define.h  PhantomWrapper.h  UnifiedCiphertext.h  UnifiedContext.h  UnifiedEncoder.h  UnifiedEvaluator.h  UnifiedEvk.h  UnifiedPlaintext.h
HE/src/: NetIO.cpp  PhantomWrapper.cpp  UnifiedEvaluator.cpp  UnifiedHE.cpp
Layer/: CMakeLists.txt
Layer/Linear/: CMakeLists.txt
Layer/Linear/include/Linear/: BatchNorm.h  Conv.h  ConvCheetah.h  Linear.h
Layer/Linear/src/: Conv.cpp  TestConv.cpp
Layer/LinearLayer/: CMakeLists.txt
Layer/LinearLayer/include/LinearLayer/: BatchNorm.h  CirLinear.h  Conv.h  ConvCheetah.h  Linear.h  MatCheetah.h  Matmul.h
Layer/LinearLayer/src/: CirConv.cpp  CirLinear.cpp  Conv.cpp  ConvCheetah.cpp  ConvNest.cpp  Linear.cpp  Matmul.cpp
Layer/Nonlinear/include/Nonlinear/: ReLU.h
Layer/NonlinearLayer/: CMakeLists.txt
Layer/NonlinearLayer/include/NonlinearLayer/: GeLU.h  Pool.h  ReLU.h  Softmax.h
Model/: CMakeLists.txt
Model/include/Model/: Primitive.h  ResNet.h
Model/src/: ResNet.cpp
Non-linear/: CMakeLists.txt
Non-linear/include/Non-linear/: bit-triple-generator.h  millionaire.h  relu-ring.h
OT/: CMakeLists.txt
OT/OTPrimitive/: CMakeLists.txt
OT/OTPrimitive/include/OTPrimitive/: cf2-ot_pack.h  cf2_ot_pack.h  cheetah_ot_pack.h  co.h  emp_iknp.h  emp_ot.h  ideal.h  iknp.h  kkot.h  np.h  ot-utils.h  ot.h  ot_np.h  ot_pack.h  ot_primitive.h  silent_ot.h  split-iknp.h  split-kkot.h  split-utils.h  split_iknp.h  split_kkot.h
OT/OTPrimitive/include/OTPrimitive/ferret/: silent_ot.h
OT/OTPrimitive/src/: OT.cpp
OT/OTProtocol/include/OTProtocol/: aux-protocols.h  bit-triple-generator.h  equality.h  millionaire.h  millionaire_with_equality.h  truncation.h  value-extension.h
OT/OTProtocol/src/: aux-protocols.cpp  trunction.cpp
OT/include/OT/: cf2-ot_pack.h  co.h  emp-ot.h  emp_iknp.h  ideal.h  iknp.h  kkot.h  np.h  ot-utils.h  ot.h  ot_pack.h  split-iknp.h  split-kkot.h  split-utils.h
OT/include/OT/Primitive/: CMakeLists.txt  cf2-ot_pack.h  co.h  emp-ot.h  emp_iknp.h  ideal.h  iknp.h  kkot.h  np.h  ot-utils.h  ot.h  ot_pack.h  split-iknp.h  split-kkot.h  split-utils.h
OT/src/: OT.cpp
Operator/: CMakeLists.txt
Operator/LinearOperator/include/LinearOperator/: Conversion.h  Polynomial.h
Operator/LinearOperator/src/: Conversion.cpp  Polynomial.cpp
Operator/NonlinearOperator/: CMakeLists.txt
Operator/NonlinearOperator/include/NonlinearOperator/: Compare.h  FixPoint.h  Truncation.h
Operator/NonlinearOperator/src/: comp.cpp
Operator/include/Operator/: Compare.h  Conversion.h  aux-protocols.h  bit-triple-generator.h  equality.h  millionaire.h  millionaire_with_equality.h  truncation.h  value-extension.h
Operator/src/: Compare.cpp  Conversion.cpp  aux-protocols.cpp  trunction.cpp
PIR/: CMakeLists.txt
PIR/include/PIR/: PirAnswerGenerator.h  PirCiphertextOps.h  PirDatabaseGenerator.h  PirGpuApps.h  PirMath.h  PirQueryGenerator.h  PirRuntime.h  PirShapeBuilder.h  PirTypes.h
PIR/src/: BatchPirGpuExecutor.cpp  PirAnswerGenerator.cpp  PirCiphertextOps.cpp  PirDatabaseGenerator.cpp  PirGpuExecutor.cpp  PirMath.cpp  PirQueryGenerator.cpp  PirRuntime.cpp  PirShapeBuilder.cpp
Python/: draw_silu.py  test_bf16_conversion.py  test_gelu.py  test_nonlinear.py  test_poly.py  test_softmax.py
Test/: CMakeLists.txt
Test/src/: PhantomBatchTestUtils.h  TestBatchCtCtGTest.cpp  TestBatchOpsGTest.cpp  TestBatchViewGTest.cpp  TestBsgsMacGTest.cpp  TestCirConv.cpp  TestCirLinear.cpp  TestConv.cpp  TestFFN.cpp  TestFixPoint.cpp  TestGeLU.cpp  TestHEGPU.cpp  TestLinearOperator.cpp  TestMatmul.cpp  TestMultiplyAdd2dFusionGTest.cpp  TestNTT.cpp  TestPIRBaseline.cpp  TestPIRGPU.cpp  TestPhantomNTTMicroBench.cpp  TestReLU.cpp  TestReLU2.cpp  TestResNet.cpp  TestVOLE.cpp  batch_gpu_pir.cpp  test_HE.cpp  test_coe.cpp  test_millionaire.cpp  test_ring-relu.cpp  test_tensor.cpp  test_truncation.cpp
Utils/: CMakeLists.txt
Utils/include/Utils/: CyclicNTT.h  ThreadPool.h  aes-ni.h  aes.h  aes_opt.h  block.h  ccrf.h  ccrh.h  constants.h  crh.h  emp-tool.h  f2k.h  file_io_channel.h  group.h  group_openssl.h  hash.h  io_channel.h  mitccrh.h  net_io_channel.h  performance.h  prg.h  prp.h  ubuntu_terminal_colors.h  utils.h  utils.hpp
Utils/src/: CyclicNTT.cpp  utils.cpp
src/: CMakeLists.txt  main.cpp
src/HE/: CMakeLists.txt  Cheetah.cpp  HE.h  NetIO.cpp  NetIO.h  main.cpp
src/OT/: ot_pack.h
src/datatype/: CMakeLists.txt  HETensor.h  Tensor.cpp  Tensor.h  a.out  tensor
src/layer/: Linear.h  Module.h  Non-Linear.h  __init__.h
src/layer/linear/: Conv.cpp  Conv.h  ConvCheetah.h  Linear.h  MatCheetah.h  TestConv.cpp  __init__.h
src/layer/nonlinear/: ReLU.h
src/network/: ResNet.cpp  ResNet.h
src/operator/: Compare.h  Conversion.h  compare.h
src/utils/: HEio.h  io.h
